# innowise_laboratory

./: README.md
lecture_1/: README.md
lecture_1/my_project/: pyproject.toml
lecture_2/: README.md  main.py
lecture_3/: README.md  main.py
lecture_4/: README.md  main.py  queries.sql  school.db
lecture_5/: README.md
lecture_5/book_api/: books.db  database.py  main.py  models.py  requirements.txt  schemas.py
lecture_6/: .dockerignore  Dockerfile  README.md
