[tool.poetry]
package-mode = false

[project]
name = "my-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim Razduyeu",email = "mrazduev@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
